# packaging-publishing-rkd43

./: .gitignore  pyproject.toml
models/: cancer_model_2.pkl
src/cancer_prediction/scripts/: app.py
